[package]
name = "solana-voting"
version = "0.1.0"
description = "This is an implementation of voting on the solana blockchain."
edition = "2018"
repository = "https://github.com/Bojidar00/solana-voting"
license = "MIT OR Apache-2.0"


[lib]
crate-type = ["cdylib", "lib"]
name = "voting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"



